--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,27 @@ body{
 .menu-btn {
     @apply w-10 h-10 grid place-items-center bg-zinc-50/10 shadow-lg transition duration-300 ease-in-out hover:bg-zinc-50/20 rounded-md;
 }
+
+
+/* navbar */
+.navbar {
+    @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50/5 scale-90 isolate blur-sm opacity-0 invisible;
+    transition: opacity 0.5s ease, transform 0.5s ease, filter 0.5s ease;
+}
+
+.navbar.active{
+    @apply opacity-100 scale-100 blur-0 visible
+}
+
+.nav-link{
+@apply grid items-center h-9 px-4 text-sm font-medium tracking-wide text-zinc-50/50 hover:text-zinc-50 transition-colors
+}
+
+
+.nav-link.active{
+    @apply text-zinc-900 duration-500 
+}
+
+.navbar .active-box {
+    @apply absolute top-2 left-2 right-2 h-9 bg-zinc-50 rounded-lg z-10 transition-[top,left] duration-500;
+}
