"Updated App component to include Hero section, refactored Header and Navbar components, and added styles to index.css"

--- a/src/index.css
+++ b/src/index.css
@@ -6,35 +6,46 @@
 html{
     scroll-behavior: smooth;
 }
-
-body{
-    @apply bg-zinc-900 text-zinc-50 h-[200vh]
+body {
+    @apply bg-zinc-900 text-zinc-50 h-[200vh];
+}
+/* utilities */
+.material-symbols-rounded{
+    @apply w-[lem] h-[1em] overflow-hidden;
+    font-variation-settings: "FILL" 0,"wght" 400,"GRAD" 0, "opsz" 24;
 }
 
 .menu-btn {
     @apply w-10 h-10 grid place-items-center bg-zinc-50/10 shadow-lg transition duration-300 ease-in-out hover:bg-zinc-50/20 rounded-md;
 }
 
-
-/* navbar */
+/* Navbar */
 .navbar {
-    @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50/5 scale-90 isolate blur-sm opacity-0 invisible;
-    transition: opacity 0.5s ease, transform 0.5s ease, filter 0.5s ease;
+    @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-800 rounded-2xl ring-inset ring-1 ring-zinc-50/5 scale-90 isolate opacity-100 visible transition-[opacity,transform,filter] z-50 md:static md:flex md:items-center md:mt-0 md:scale-100 backdrop-blur-2xl;
 }
 
-.navbar.active{
-    @apply opacity-100 scale-100 blur-0 visible
+.nav-link {
+    @apply grid items-center h-9 px-4 text-sm font-medium tracking-wide text-zinc-50/50 hover:text-zinc-50 transition-colors;
 }
 
-.nav-link{
-@apply grid items-center h-9 px-4 text-sm font-medium tracking-wide text-zinc-50/50 hover:text-zinc-50 transition-colors
-}
-
-
-.nav-link.active{
-    @apply text-zinc-900 duration-500 
+.nav-link.active {
+    @apply text-zinc-50;  
 }
 
 .navbar .active-box {
-    @apply absolute top-2 left-2 right-2 h-9 bg-zinc-50 rounded-lg z-10 transition-[top,left] duration-500;
+    @apply absolute top-2 left-2 right-2 h-9 bg-zinc-50/10 rounded-lg z-10 transition-[top,left,width,height] duration-500;
+}
+
+.contact-item {
+    @apply hidden sm:block md:hidden;
+}
+
+/* Button */
+
+.btn{
+    @apply max-w-max h-9 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-[background-color]
+}
+
+.btn-secondary{
+    @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80
 }
